changed the UI for homepage

--- a/eQueue/eQueue-war/web/storeDetails.xhtml
+++ b/eQueue/eQueue-war/web/storeDetails.xhtml
@@ -31,7 +31,7 @@
                         </p:column>
                         <p:column>
                             <div style="text-align: left;">
-                                <p:inputText value="#{storeDetailsManagedBean.store.storeName}" placeholder="#{storeDetailsManagedBean.store.storeName}" required="true" requiredMessage="Store name is required" size="16" maxlength="64">
+                                <p:inputText value="#{storeDetailsManagedBean.store.storeName}" placeholder="#{storeDetailsManagedBean.store.storeName}" required="true" requiredMessage="Store name is required" size="64" maxlength="64">
                                     <f:validateBean />
                                 </p:inputText>
                             </div>
@@ -46,7 +46,7 @@
                         </p:column>
                         <p:column>
                             <div style="text-align: left;">
-                                <p:inputText value="#{storeDetailsManagedBean.store.storeEmail}" placeholder="#{storeDetailsManagedBean.store.storeEmail}" required="true" requiredMessage="Store email is required" size="16" maxlength="64">
+                                <p:inputText value="#{storeDetailsManagedBean.store.storeEmail}" placeholder="#{storeDetailsManagedBean.store.storeEmail}" required="true" requiredMessage="Store email is required" size="64" maxlength="64">
                                     <f:validateBean />
                                 </p:inputText>
                             </div>
@@ -61,7 +61,7 @@
                         </p:column>
                         <p:column>
                             <div style="text-align: left;">
-                                <p:inputText value="#{storeDetailsManagedBean.store.storeAddress}" placeholder="#{storeDetailsManagedBean.store.storeAddress}" required="true" requiredMessage="Store address is required" size="16" maxlength="64">
+                                <p:inputText value="#{storeDetailsManagedBean.store.storeAddress}" placeholder="#{storeDetailsManagedBean.store.storeAddress}" required="true" requiredMessage="Store address is required" size="64" maxlength="64">
                                     <f:validateBean />
                                 </p:inputText>
                             </div>
@@ -76,7 +76,7 @@
                         </p:column>
                         <p:column>
                             <div style="text-align: left;">
-                                <p:inputText value="#{storeDetailsManagedBean.store.storeContact}" placeholder="#{storeDetailsManagedBean.store.storeContact}" required="true" requiredMessage="Store contact is required" size="16" maxlength="64">
+                                <p:inputText value="#{storeDetailsManagedBean.store.storeContact}" placeholder="#{storeDetailsManagedBean.store.storeContact}" required="true" requiredMessage="Store contact is required" size="64" maxlength="64">
                                     <f:validateBean />
                                 </p:inputText>
                             </div>
@@ -91,7 +91,7 @@
                         </p:column>
                         <p:column>
                             <div style="text-align: left;">
-                                <p:inputText value="#{storeDetailsManagedBean.store.estimatedQueueUnitWaitingMinutes}" placeholder="#{storeDetailsManagedBean.store.estimatedQueueUnitWaitingMinutes}" required="true" requiredMessage="Estimated queue waiting minutes is required">
+                                <p:inputText value="#{storeDetailsManagedBean.store.estimatedQueueUnitWaitingMinutes}" placeholder="#{storeDetailsManagedBean.store.estimatedQueueUnitWaitingMinutes}" required="true" requiredMessage="Estimated queue waiting minutes is required" size="64">
                                     <f:validateBean />
                                 </p:inputText>
                             </div>
@@ -106,7 +106,7 @@
                         </p:column>
                         <p:column>
                             <div style="text-align: left;">
-                                <p:inputText value="#{storeDetailsManagedBean.store.allocationGraceWaitingMinutes}" placeholder="#{storeDetailsManagedBean.store.allocationGraceWaitingMinutes}" required="true" requiredMessage="Allocation grace waiting minutes is required">
+                                <p:inputText value="#{storeDetailsManagedBean.store.allocationGraceWaitingMinutes}" placeholder="#{storeDetailsManagedBean.store.allocationGraceWaitingMinutes}" required="true" requiredMessage="Allocation grace waiting minutes is required" size="64">
                                     <f:validateBean />
                                 </p:inputText>
                             </div>
@@ -121,7 +121,7 @@
                         </p:column>
                         <p:column>
                             <div style="text-align: left;">
-                                <p:inputText value="#{storeDetailsManagedBean.store.messageOfTheDay}" placeholder="#{storeDetailsManagedBean.store.messageOfTheDay}" required="true" requiredMessage="Message of the day is required">
+                                <p:inputText value="#{storeDetailsManagedBean.store.messageOfTheDay}" placeholder="#{storeDetailsManagedBean.store.messageOfTheDay}" required="true" requiredMessage="Message of the day is required" size="64">
                                     <f:validateBean />
                                 </p:inputText>
                             </div>
