--- a/eQueue/eQueue-war/web/homepage.xhtml
+++ b/eQueue/eQueue-war/web/homepage.xhtml
@@ -9,96 +9,100 @@
 
     <ui:define name="content">
         <h:outputStylesheet library="css" name="homepage.css" />
-        <div class="outer-container">
 
-            <p:link outcome="storeDetails.xhtml">
-                <p:panel class="link-panel-container">
-                    <h:panelGrid class="vertically-centered">
+        <div class="outer-container">
+            <p:panel class="link-panel-container">
+                <h:panelGrid class="vertically-centered">
+                    <p:link outcome="storeDetails.xhtml">
                         <span class="store-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Store</p>
                             <p style="margin: 0">Details</p>
                         </div>
-                    </h:panelGrid>
-                </p:panel>
-            </p:link>
-            <p:link outcome="queueManagement.xhtml">
-                <p:panel class="link-panel-container">
-                    <h:panelGrid class="vertically-centered">
+                    </p:link>
+                </h:panelGrid>
+            </p:panel>
+            <p:panel class="link-panel-container">
+                <h:panelGrid class="vertically-centered">
+                    <p:link outcome="queueManagement.xhtml">
                         <span class="queue-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Queue</p>
                             <p style="margin: 0">Management</p>
                         </div>
-                    </h:panelGrid>
-                </p:panel>
-            </p:link>
-            <p:link outcome="menuManagement.xhtml">
-                <p:panel class="link-panel-container">
-                    <h:panelGrid class="vertically-centered">
+                    </p:link>
+                </h:panelGrid>
+            </p:panel>
+            <p:panel class="link-panel-container">
+                <h:panelGrid class="vertically-centered">
+                    <p:link outcome="menuManagement.xhtml">
                         <span class="menu-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Menu</p>
                             <p style="margin: 0">Management</p>
                         </div>
-                    </h:panelGrid>
-                </p:panel>
-            </p:link>
-            <p:link outcome="diningTableManagement.xhtml">
-                <p:panel class="link-panel-container">
-                    <h:panelGrid class="vertically-centered">
+                    </p:link>
+                </h:panelGrid>
+            </p:panel>
+            <p:panel class="link-panel-container">
+                <h:panelGrid class="vertically-centered">
+                    <p:link outcome="diningTableManagement.xhtml">
                         <span class="table-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Table</p>
                             <p style="margin: 0">Management</p>
                         </div>
-                    </h:panelGrid>
-                </p:panel>
-            </p:link>
-            <p:link outcome="kitchenManagement.xhtml">
-                <p:panel class="link-panel-container">
-                    <h:panelGrid class="vertically-centered">
+                    </p:link>
+                </h:panelGrid>
+            </p:panel>
+        </div>
+
+        <div class="outer-container">
+            <p:panel class="link-panel-container">
+                <h:panelGrid class="vertically-centered">
+                    <p:link outcome="kitchenManagement.xhtml">
                         <span class="kitchen-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Kitchen</p>
                             <p style="margin: 0">Management</p>
                         </div>
-                    </h:panelGrid>
-                </p:panel>
-            </p:link>
-            <p:link outcome="employeeManagement.xhtml">
-                <p:panel class="link-panel-container">
-                    <h:panelGrid class="vertically-centered">
+                    </p:link>
+                </h:panelGrid>
+            </p:panel>
+            <p:panel class="link-panel-container">
+                <h:panelGrid class="vertically-centered">
+                    <p:link outcome="employeeManagement.xhtml">
                         <span class="employees-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Employee</p>
                             <p style="margin: 0">Management</p>
                         </div>
-                    </h:panelGrid>
-                </p:panel>
-            </p:link>
-            <p:link outcome="transactionManagement.xhtml">
-                <p:panel class="link-panel-container">
-                    <h:panelGrid class="vertically-centered">
+                    </p:link>
+                </h:panelGrid>
+            </p:panel>
+            <p:panel class="link-panel-container">
+                <h:panelGrid class="vertically-centered">
+                    <p:link outcome="transactionManagement.xhtml">
                         <span class="transaction-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
                             <p style="margin: 0">Transaction</p>
                             <p style="margin: 0">Management</p>
                         </div>
-                    </h:panelGrid>
-                </p:panel>
-            </p:link>
-            <p:link outcome="analyticsPage.xhtml">
-                <p:panel class="link-panel-container">
-                    <h:panelGrid class="vertically-centered">
+                    </p:link>
+                </h:panelGrid>
+            </p:panel>
+            <p:panel class="link-panel-container">
+                <h:panelGrid class="vertically-centered">
+                    <p:link outcome="analyticsPage.xhtml">
                         <span class="analytics-icon custom-icon-homepage"/>
                         <div class="link-text-styling">
+                            <p style="margin: 0">Data</p>
                             <p style="margin: 0">Analytics</p>
                         </div>
-                    </h:panelGrid>
-                </p:panel>
-            </p:link>
-
+                    </p:link>
+                </h:panelGrid>
+            </p:panel>
         </div>
+
     </ui:define>
 </ui:composition>
